--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <nav class="barra">
-        <h3>Elementos de trabajo</h5>
-            <button class="boton_barra">Agregar trabajador</button>
+        <h2>Elementos de trabajo</h5>
+            <button href="#" class="boton_barra">Agregar trabajador</button>
             <img class="BotónSalir" src="assets/img/nav/BotónSalir.svg" type="button">
             <section class="grupo_acciones">
                 <img class="icono_nav" src="assets/img/nav/Group.svg">
@@ -23,8 +23,30 @@
                 <img class="icono_nav" src="assets/img/nav/Vector (3).svg">
             </section>
     </nav>
+    <img class="foto_usuario" src="assets/img/left/UserImg.svg">
     <section class="usuario">
-        
+        <div class="datos_usuario">
+        <h3>Deyner Antonio Romero <br>
+            Palomino</h3>
+            <p>C.C 1039010010 <br>
+            Lider de equipo de Desarrollo <br>
+            Directo GTH</p>
+        </div>
+        <div class="acciones">
+            <section class="columna_izquierda">
+            <img class="izquierda" src="assets/img/left/Datostrabajador.svg">
+            <img class="izquierda" src="assets/img/left/Capacitaciones.svg">
+            <img class="izquierda" src="assets/img/left/Incapacidades.svg" >
+            <img class="izquierda" src="assets/img/left/EstadoSalud.svg">
+             </section>
+             <section class="columna_derecha">
+            <img class="derecha" src="assets/img/left/ElementosTrabajo.svg">
+            <img class="derecha" src="assets/img/left/ExámenesYVacunas.svg">   
+            <img class="derecha" src="assets/img/left/EnfermedadesLaborales.svg">
+            <img class="derecha" src="assets/img/left/AccidentesLaborales.svg">
+        </section>
+        </div>
     </section>
+    
 </body>
 </html>
