--- a/index.html
+++ b/index.html
@@ -8,45 +8,140 @@
     <title>Elementos de trabajo</title>
 </head>
 <body>
-    <nav class="barra">
+    <nav class="Barra">
         <h2>Elementos de trabajo</h5>
-            <button href="#" class="boton_barra">Agregar trabajador</button>
+            <button href="#" class="Boton_barra">Agregar trabajador</button>
             <img class="BotónSalir" src="assets/img/nav/BotónSalir.svg" type="button">
-            <section class="grupo_acciones">
-                <img class="icono_nav" src="assets/img/nav/Group.svg">
-                <img class="icono_nav" src="assets/img/nav/Group (1).svg">
-                <img class="icono_nav" src="assets/img/nav/Group 10.svg">
-                <img class="icono_nav" src="assets/img/nav/Vector.svg">
-                <img class="icono_nav" src="assets/img/nav/Vector (1).svg">
-                <img class="icono_nav" src="assets/img/nav/Vector (2).svg">
-                <img class="icono_nav" src="assets/img/nav/LogoSGC.svg">
-                <img class="icono_nav" src="assets/img/nav/Vector (3).svg">
+            <section class="Grupo_acciones">
+                <img class="Icono_nav" src="assets/img/nav/Group.svg">
+                <img class="Icono_nav" src="assets/img/nav/Group (1).svg">
+                <img class="Icono_nav" src="assets/img/nav/Group 10.svg">
+                <img class="Icono_nav" src="assets/img/nav/Vector.svg">
+                <img class="Icono_nav" src="assets/img/nav/Vector (1).svg">
+                <img class="Icono_nav" src="assets/img/nav/Vector (2).svg">
+                <img class="Icono_nav" src="assets/img/nav/LogoSGC.svg">
+                <img class="Icono_nav" src="assets/img/nav/Vector (3).svg">
             </section>
     </nav>
-    <img class="foto_usuario" src="assets/img/left/UserImg.svg">
-    <section class="usuario">
-        <div class="datos_usuario">
+    <img class="Foto_usuario" src="assets/img/left/UserImg.svg">
+    <section class="Usuario">
+        <div class="Datos_usuario">
         <h3>Deyner Antonio Romero <br>
             Palomino</h3>
             <p>C.C 1039010010 <br>
             Lider de equipo de Desarrollo <br>
             Directo GTH</p>
         </div>
-        <div class="acciones">
-            <section class="columna_izquierda">
-            <img class="izquierda" src="assets/img/left/Datostrabajador.svg">
-            <img class="izquierda" src="assets/img/left/Capacitaciones.svg">
-            <img class="izquierda" src="assets/img/left/Incapacidades.svg" >
-            <img class="izquierda" src="assets/img/left/EstadoSalud.svg">
+        <div class="Acciones">
+            <section class="Columna_izquierda">
+            <img class="Izquierda" src="assets/img/left/Datostrabajador.svg">
+            <img class="Izquierda" src="assets/img/left/Capacitaciones.svg">
+            <img class="Izquierda" src="assets/img/left/Incapacidades.svg" >
+            <img class="Izquierda" src="assets/img/left/EstadoSalud.svg">
              </section>
-             <section class="columna_derecha">
-            <img class="derecha" src="assets/img/left/ElementosTrabajo.svg">
-            <img class="derecha" src="assets/img/left/ExámenesYVacunas.svg">   
-            <img class="derecha" src="assets/img/left/EnfermedadesLaborales.svg">
-            <img class="derecha" src="assets/img/left/AccidentesLaborales.svg">
+             <section class="Columna_derecha">
+            <img class="Derecha" src="assets/img/left/ElementosTrabajo.svg">
+            <img class="Derecha" src="assets/img/left/ExámenesYVacunas.svg">   
+            <img class="Derecha" src="assets/img/left/EnfermedadesLaborales.svg">
+            <img class="Derecha" src="assets/img/left/AccidentesLaborales.svg">
         </section>
         </div>
     </section>
-    
+    <nav class="Nav_derecha">
+        <img class="Reloj" src="assets/img/card/ElementosTrabajoBoton.svg">
+        <img class="Rectangulo" src="assets/img/card/Rectangle 66.svg">
+        <img class="Listo" src="assets/img/card/ElementosTrabajoBoton-1.svg" alt="">
+    </nav>
+    <section class="Elementos_pendientes">
+    <h3 class="Titulo_pendientes">Elementos de trabajo pendientes por asignar</h3>
+    <button class="Agregar">+</button>
+    <div class="Carta_formulario">
+    <ul class="Lista">
+    <li id="Primero">Parche ocular (PROGRAMA SST)</li>
+    <li id="Segundo">ASEO Y CAFETERÍA</li>
+    <li id="Tercero">Retiro</li>
+    </ul>
+    <section class="Estado_titulo">
+    <h4>Estado</h3>
+    <select name="Estado" class="Estado">
+        <option value="value1">Aprobado</option>
+        <option value="value2" selected>Pendiente</option>
+        <option value="value3">No Aprobado</option>
+      </select>
+    </section>
+    <section class="Fecha_titulo">
+        <h4>Fecha de entrega</h4>
+        <input class="Fecha" type="date" value="2020/01/19" min="2020/01/19" max="2022/01/19">
+    </section>
+    <section class="Fecha_reposicion">
+        <h4>Fecha de reposición</h4>
+        <input class="Fecha_re" type="date" value="2020/01/19" min="2020/01/19" max="2022/01/19">
+    </section>
+    <section class="Observaciones">
+        <textarea class="Observaciones_caja"name="observaciones" rows="3" cols="25">Observaciones</textarea>
+        <img class="clip" src="assets/img/card/Vector.svg">
+    </section>
+<button class="Completar">Completar</button>
+    </div>
+    <!-- Segundo formulario -->
+    <div class="Carta_formulario2">
+        <ul class="Lista">
+        <li id="Primero">Parche ocular (PROGRAMA SST)</li>
+        <li id="Segundo">ASEO Y CAFETERÍA</li>
+        <li id="Tercero">Retiro</li>
+        </ul>
+        <section class="Estado_titulo">
+        <h4>Estado</h3>
+        <select name="Estado" class="Estado">
+            <option value="value1">Aprobado</option>
+            <option value="value2" selected>Pendiente</option>
+            <option value="value3">No Aprobado</option>
+          </select>
+        </section>
+        <section class="Fecha_titulo">
+            <h4>Fecha de entrega</h4>
+            <input class="Fecha" type="date" value="2020/01/19" min="2020/01/19" max="2022/01/19">
+        </section>
+        <section class="Fecha_reposicion">
+            <h4>Fecha de reposición</h4>
+            <input class="Fecha_re" type="date" value="2020/01/19" min="2020/01/19" max="2022/01/19">
+        </section>
+        <section class="Observaciones">
+            <textarea class="Observaciones_caja"name="observaciones" rows="3" cols="25">Observaciones</textarea>
+            <img class="clip" src="assets/img/card/Vector.svg">
+        </section>
+    <button class="Completar">Completar</button>
+        </div>
+        <!-- Tercer formulario -->
+        <div class="Carta_formulario3">
+            <ul class="Lista">
+            <li id="Primero">Parche ocular (PROGRAMA SST)</li>
+            <li id="Segundo">ASEO Y CAFETERÍA</li>
+            <li id="Tercero">Retiro</li>
+            </ul>
+            <section class="Estado_titulo">
+            <h4>Estado</h3>
+            <select name="Estado" class="Estado">
+                <option value="value1">Aprobado</option>
+                <option value="value2" selected>Pendiente</option>
+                <option value="value3">No Aprobado</option>
+              </select>
+            </section>
+            <section class="Fecha_titulo">
+                <h4>Fecha de entrega</h4>
+                <input class="Fecha" type="date" value="2020/01/19" min="2020/01/19" max="2022/01/19">
+            </section>
+            <section class="Fecha_reposicion">
+                <h4>Fecha de reposición</h4>
+                <input class="Fecha_re" type="date" value="2020/01/19" min="2020/01/19" max="2022/01/19">
+            </section>
+            <section class="Observaciones">
+                <textarea class="Observaciones_caja"name="observaciones" rows="3" cols="25">Observaciones</textarea>
+                <img class="clip" src="assets/img/card/Vector.svg">
+            </section>
+        <button class="Completar">Completar</button>
+            </div>
+</section>
+</section>
 </body>
 </html>
