90% terminado porque siempre falta algo más

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="Barra">
-        <h2>Elementos de trabajo</h5>
+        <h2>Elementos de trabajo</h2>
             <button href="#" class="Boton_barra">Agregar trabajador</button>
             <img class="BotónSalir" src="assets/img/nav/BotónSalir.svg" type="button">
             <section class="Grupo_acciones">
@@ -55,6 +55,7 @@
     <section class="Elementos_pendientes">
     <h3 class="Titulo_pendientes">Elementos de trabajo pendientes por asignar</h3>
     <button class="Agregar">+</button>
+    <h5 class="info">Asignar nuevo elemento de trabajo</h1>
     <div class="Carta_formulario">
     <ul class="Lista">
     <li id="Primero">Parche ocular (PROGRAMA SST)</li>
