"Siempre habra algo que mejorar"

--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
     </nav>
     <section class="Elementos_pendientes">
     <h3 class="Titulo_pendientes">Elementos de trabajo pendientes por asignar</h3>
+    <div class="mensaje">
     <button class="Agregar">+</button>
-    <h5 class="info">Asignar nuevo elemento de trabajo</h1>
+    <h5 class="info">Asignar nuevo elemento de trabajo <img src="assets/img/card/Polygon 1.svg" class="poligono"></h5>
+   </div>
     <div class="Carta_formulario">
     <ul class="Lista">
     <li id="Primero">Parche ocular (PROGRAMA SST)</li>
@@ -144,5 +146,6 @@
             </div>
 </section>
 </section>
+<script src="assets/js/hover.js"></script>
 </body>
 </html>
